here is the final version

--- a/views/index.erb
+++ b/views/index.erb
@@ -1,86 +1,19 @@
-<% @test=["home","score"] %>
-
-<table>
-  <th></th>
-
-  <% @test.each do |word| %>
-
-    <tr>
-      <td class="row">
-
-      <% word.each_char do |char| %>
-      <% @letter_score = Scrabble::Scoring.char_score(char)%>
-      <section class = "tile">
-        <span class="letter"><%= char.upcase %></span>
-        <span class="letter_score"><%= @letter_score %></span>
-      </section>
-      <% end %>
-      </td>
-      <!-- <td class="score">
-        score:
-      </td> -->
-    <tr>
-  <% end %>
-
-</table>
-
-
-<!-- <% @test=["home","score"] %>
-
-<table>
-  <th></th>
-
-  <% @test.each do |word| %>
-
-    <tr>
-      <td class="row">
-
-      <% word.each_char do |char| %>
-      <% letter_score = Scrabble::Scoring.char_score(char)%>
-      <section class = "tile">
-        <span class="letter"><%= char.upcase %></span>
-        <span class="letter_score"><%= letter_score %></span>
-      </section>
-      <% end %>
-      </td>
-      <td>
-      </td>
-    <tr>
-  <% end %>
-
-</table> -->
-
-
-
-
-
-<!-- <ul>
-  <% @test.each do |word| %>
-
-      <li class="letter">
-      <% word.each_char do |char| %>
-        <%= char.upcase %>
-      <% end %>
-    </li>
-  <% end %>
-
-</ul> -->
-
-
-<!--
-
-<% @test="home" %>
-
-<table>
-  <th></th>
-  <tr>
-    <td>
-    <% @test.each_char do |char| %>
-      <%= char %>
+<% @test=["Let's","Play", "Scrabble"] %>
+<section class="home_page_table">
+  <table class="home_table">
+    <% @test.each do |word| %>
+      <tr>
+        <td class="row">
+          <% word.each_char do |char| %>
+            <% @letter_score = Scrabble::Scoring.char_score(char)%>
+            <section class="tile">
+              <span class="home_letter"><%= char.upcase %></span>
+              <span class="letter_score"><%= @letter_score %></span>
+            </section>
+          <% end %>
+        </td>
+      <tr>
     <% end %>
-    </td>
-    <td>
-      score:
-    </td>
-  <tr>
-</table> -->
+  </table>
+</section>
+<section class="home_image"></section>
