--- a/views/test.erb
+++ b/views/test.erb
@@ -3,17 +3,15 @@
   <head>
     <title>Scrabble</title>
     <meta charset="UTF-8">
-    <title>scrabble</title>
     <link rel="stylesheet" type="text/css" href="stylesheet/styles.css">
   </head>
   <body>
     <header>
-      <section class="header_title">
-      </section>
+
       <nav class="main_nav">
         <ul>
           <li><a href="/">HOME</a></li>
-          <li <span class="nav_center"><a href="/score">SCORE</a></span></li>
+          <li><a href="/score">SCORE</a></li>
           <li><a href="/score-many">SCORE-MANY</a></li>
         </ul>
       </nav>
