--- a/public/stylesheet/styles.css
+++ b/public/stylesheet/styles.css
@@ -5,22 +5,95 @@
 html{
    font-size: 16px;
    height: 100%;
-   /*border-top: 8px solid white;
-   border-right: 8px solid white;
-   border-left: 8px solid white;
-   /*background-color: black;*/*/
+   margin: 0.5rem;
 }
 
 body{
-  min-height: 100%;
+  min-height: 99%;
   position: relative;
 }
 
-/*body:after{
-  content: '';
+body:after{
   display: block;
-  height: 100px;
-}*/
+  height: 90%;
+}
+
+/**  HEADER ************************************************************/
+
+header{
+  position: relative;
+  width: 100%;
+  height: 7rem;
+  background: url("../images/wood_style1.jpg") repeat center center;
+  background-size: cover;
+}
+
+main{
+  position: relative;
+  margin-top: 1rem;
+  display: inline-block;
+  margin-bottom: 3rem;
+}
+
+/**HEADER------header_title*/
+.header_title {
+    position: absolute;
+    width: 100%;
+    background: url("../images/scrabble_word2.jpg") no-repeat center center;
+    margin: auto;
+    height: 100%;
+    opacity: 0.8;
+    bottom: .6rem;
+    box-shadow: 2px 2px 4px #888888;
+    border-radius: 2px;
+}
+
+
+/**HEADER------NAV MENU BAR*/
+
+
+nav{
+  position: absolute;
+  width: 100%;
+  background-color: white;
+  margin-bottom: 0.2rem;
+  height: 1.8rem;
+  opacity: 0.9;
+  bottom: 0;
+}
+
+nav ul {
+  list-style-type: none;
+  text-align: center;
+  padding-top: .5rem;
+  padding-left: 0;
+  margin:  0;
+}
+nav ul li{
+  text-align: center;
+  display: inline-block;
+}
+
+.nav_center{
+  margin-left: 1.5rem;
+  margin-right: 1.5rem;
+}
+
+a{
+  color: black;
+  text-decoration: none;
+}
+
+/***  TABLE *********************************************************/
+/*HOME TABLE*/
+
+.home_page_table{
+  width: 100%;
+  margin: auto;
+}
+.home_table{
+  position: relative;
+}
 
 /***LETTER TILES*********************************************************/
 .tile{
@@ -30,8 +103,6 @@ body{
   background: url("../images/tiles_style2.jpg") no-repeat center center;
   background-size: cover;
   box-shadow: 2px 2px 4px #888888;
-  /*background-size: 40%;
-  opacity: 0.8;*/
   border-radius: 2px;
   position: relative;
 }
@@ -41,17 +112,18 @@ body{
   margin: auto;
   width: 100%;
   font-weight: bold;
+  font-size: 1.1rem;
   top: 5px;
   position: absolute;
 }
 
 .letter_score{
   bottom: 0;
-  font-size: .9rem;
+  font-size: .8rem;
   right: 0;
   position: absolute;
 }
-/***TOTAL SCORE TILE*********************************************************/
+/***TOTAL SCORE TILE***/
 
 .score_tile{
   display: inline-block;
@@ -60,8 +132,6 @@ body{
   background: url("../images/score_tile.jpg") no-repeat center center;
   background-size: cover;
   box-shadow: 2px 2px 4px #888888;
-  /*background-size: 40%;
-  opacity: 0.8;*/
   border-radius: 2px;
   position: relative;
 }
@@ -93,10 +163,205 @@ body{
   position: absolute;
 }
 
+/*@@@@@INDEX@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@@*/
+/*@@INDEX@@  HOME TABLE LETTER TILES  ***************************/
+
+.home_page_table {
+  width: 100%;
+  margin: auto;
+  position: fixed;
+}
+
+.home_table{
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
+
+.home_letter{
+  text-align: center;
+  width: 0%;
+  font-weight: bold;
+  font-size: 1rem;
+  top: 2.5px;
+  position: absolute;
+}
+/*@@INDEX@@  HOME TABLE LETTER TILES  ***************************/
+.home_page_background{
+  position: fixed;
+  height: 20%;
+  width: 98%;
+  bottom: 12%;
+  margin-right: 500px;
+  background: url("../images/scrabble_background2.jpg") repeat center center;
+}
+
+/*@@@@@ FORM BUTTONS**************************************/
+
+/*#reset {
+    background-color: #ccc;
+    -moz-border-radius: 5px;
+    -webkit-border-radius: 5px;
+    border-radius:6px;
+    color: #fff;
+    font-family: 'Oswald';
+    font-size: 20px;
+    text-decoration: none;
+    cursor: pointer;
+    border:none;
+}
+
+
+
+#reset:hover {
+    border: none;
+    background:red;
+    box-shadow: 0px 0px 1px #777;
+}*/
+#reset {
+
+  background: url("../images/reset_red.jpg") no-repeat;
+  background-size: cover;
+  padding: 1px;
+  border: 1rem solid #60A1EF;
+  width: 3rem;
+  height: 1rem;
+  text-decoration: none;
+  cursor: pointer;
+  bottom: 0;
+  border: none;
+  position: inherit;
+}
+
+#reset:hover {
+  background: url("../images/reset_red.jpg") no-repeat center center;
+  background-size: cover;
+  width: 6rem;
+  height: 2rem;
+  border: none;
+  box-shadow: 0px 0px 1px #777;
+}
+
+#submit {
+
+  background: url("../images/score_it2_green.jpg") no-repeat;
+  background-size: cover;
+  padding: 1px;
+  width: 6rem;
+  height: 2rem;
+  text-decoration: none;
+  cursor: pointer;
+  top: 0.5rem;
+  border: none;
+  position: relative;;
+}
+
+#submit:hover {
+  background: url("../images/score_it2.jpg") no-repeat center center;
+  background-size: cover;
+  width: 6rem;
+  height: 2rem;
+  border: none;
+  box-shadow: 0px 0px 1px #777;
+}
+
+
+
+input[type=text] {
+  height: 3rem;
+  background-color: #3CBC8D;
+  color: white;
+}
+
+.form_label {
+  height: 2rem;
+  color: #3CBC8D;
+}
+/*@@@@@ HOME TABLE LETTER TILES**************************************
 
 
 
 
+/***HOME TABLE LETTER TILES**************************************
+
+
+.home_table .tile{
+  display: inline-block;
+  height: .25rem;
+  width: .25rem;
+  background: url("../images/tiles_style2.jpg") no-repeat center center;
+  background-size: cover;
+  box-shadow: 1px 1px 2px #888888;
+  border-radius: 1px;
+  position: relative;
+}
+
+.home_table .letter{
+  text-align: center;
+  margin: auto;
+  width: 100%;
+  font-weight: bold;
+  top: 2.5px;
+  position: absolute;
+}
+
+.home_table .letter_score{
+  bottom: 0;
+  font-size: .45rem;
+  right: 0;
+  position: absolute;
+}
+**HOME TABLE - TOTAL SCORE TILE*********
+
+.home_table .score_tile{
+  display: inline-block;
+  height: 1.1rem;
+  width: 1.1rem;
+  background: url("../images/score_tile.jpg") no-repeat center center;
+  background-size: cover;
+  box-shadow: 1px 1px 2px #888888;
+  border-radius: 1px;
+  position: relative;
+}
+
+.home_table .total_score{
+  text-align: center;
+  color: white;
+  margin: auto;
+  width: 100%;
+  font-weight: bold;
+  top: 2.5px;
+  position: absolute;
+}
+
+.home_table .score_word{
+  bottom: 0;
+  color: white;
+  font-size: .25rem;
+  margin: auto;
+  text-align: center;
+  width: 100%;
+  position: absolute;
+}
+
+.home_table .fifty_point_score{
+  bottom: 0;
+  font-size: .49rem;
+  right: 0;
+  position: absolute;
+}*/
+
+
+/*.score_page{
+  float: left;
+  display: block;
+}*/
+
+/*.form{
+  float: right;
+  margin-t: 5rem;
+
+}*/
 
 
 /***FOOTER************************************************************/
@@ -104,9 +369,50 @@ body{
 footer{
   position: absolute;
   bottom: 0;
-  height: 20%;
+  height: 3rem;
   width: 100%;
   background: url("../images/scrabble_letters.jpg") repeat center center;
+  background: url("../images/wood_style1.jpg") repeat center center;
+
   background-size: cover;
 
 }
+
+.home_image {
+  position: fixed;
+  bottom: 0%;
+  height: 50%;
+  width: 100%;
+  background: url("../images/scrabble_letters.jpg") repeat center center;
+  background-size: contain;
+}
+
+/*.side_image {
+  float: left;
+  bottom: 0%;
+  height: 8rem%;
+  width: 100%;
+  background: url("../images/scrabble_letters.jpg") repeat center center;
+  background-size: contain;
+}*/
+
+/*.score_page {
+  float: right;
+  bottom: 0%;
+  height: 8rem%;
+  width: 30%%;
+  background: url("../images/scrabble_letters.jpg") repeat center center;
+  background-size: contain;
+  background: url("../images/scrabble_letters.jpg") repeat center center;
+
+}*/
+
+/*form{*/
+    /* float: none; */
+  /* display: inline-block; */
+  /*position: relative;
+  float:left;
+  top: 10rem;
+  width: 90%;
+  margin: auto;
+}*/
