--- a/views/score.erb
+++ b/views/score.erb
@@ -1,3 +1,4 @@
+<article class="layout">
 <% @test=["Let's","Play", "Scrabble"] %>
 <section class="score_page">
   <table class="home_table">
@@ -44,5 +45,5 @@
       <tr>
   </table>
 <% end %>
-
 </section>
+</article>
